# napari-brightness-contrast

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
.napari/: config.yml
demo/: demo.py
napari_brightness_contrast/: __init__.py  _dock_widget.py
napari_brightness_contrast/_tests/: test_dock_widget.py
