[metadata]
name = napari-brightness-contrast
version = 0.1.6
author = Robert Haase
author_email = robert.haase@tu-dresden.de
license = BSD-3-Clause
url = https://github.com/haesleinhuepf/napari-brightness-contrast
description = Advanced layer visualization options
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-brightness-contrast/issues
    Documentation = https://github.com/haesleinhuepf/napari-brightness-contrast#README.md
    Source Code = https://github.com/haesleinhuepf/napari-brightness-contrast
    User Support = https://github.com/haesleinhuepf/napari-brightness-contrast/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    napari
    numpy
    pyqtgraph
    superqt
    napari-tools-menu

[options.extras_require]
tests =
    pytest
    pytest-qt
    
[options.entry_points] 
napari.plugin = 
    napari-brightness-contrast = napari_brightness_contrast
